test/types/type_variables/deitz/part7/test_infer_class2.chpl
class C {
  type t;
  var f : t;
}

var c = new C(f = 1);

writeln(c);

var d : C(int) = new C(int, 12);

writeln(d);
